<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragmant_registro"
    tools:context=".RegistroFragment">

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/tv_registro"
        android:textSize="30sp"
        android:layout_alignParentTop="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_correo"
        android:hint="@string/et_correo"
        android:layout_below="@+id/tv_registro"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:hint="@string/et_password"
        android:layout_below="@+id/et_correo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/btn_registro" />


</RelativeLayout>