<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minHeight="?attr/listPreferredItemHeight"
    android:paddingStart="?attr/listPreferredItemPaddingStart"
    android:paddingEnd="?attr/listPreferredItemPaddingEnd">

    <TextView
        android:id="@+id/item_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/item_coidgo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_codigo"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/item_producto"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_producto"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/item_cantidad"
            android:text="@string/item_cantidad"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <TextView
            android:id="@+id/item_precio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/item_precio"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_elminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/item_btn_eliminar"
        android:textAppearance="?attr/textAppearanceListItem" />

</RelativeLayout>