<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_inicia_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/tv_iniciar_sesion"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_inicia_sesion"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_correo"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/et_correo"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_ingresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_iniciar_sesion" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ingresa"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/btn_google"
            android:textColor="@color/black" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
</RelativeLayout>